# djangosnippets.org

./: .coveragerc  .env  .env.example  .env.template.docker  .env.template.local  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  Procfile  README.md  README.rst  README.txt  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  dummy-contrib.txt  feeds.py  forms.py  manage.py  managers.py  models.py  package-lock.json  package.json  pyproject.toml  pytest.ini  reqirements.txt  requirements-common.txt  requirements-dev.txt  requirements-vendor.txt  requirements.txt  settings.py  setup.cfg  setup.py  tailwind.config.js  tox.ini  urls.py
.github/: dependabot.yml
.github/workflows/: heroku-deploy.yml  pythonpackage.yml
base/: exceptions.py  forms.py  main.py  pagination.py  views.py
base/components/: components.py  contact_information_button.html  icon.html  pagination.html  sorting_tabs.html
base/templatetags/: base_templatetags.py  components.py
base/tests/: models.py  test_components.py  tests.py
cab/: LICENSE  README.rst  README.txt  __init__.py  admin.py  feeds.py  forms.py  listeners.py  main.py  managers.py  models.py  search_indexes.py  setup.py  tox.ini  utils.py
cab/api/: serializers.py  urls.py  views.py
cab/cab/: __init__.py  feeds.py  forms.py  models.py  utils.py
cab/comments/: __init__.py  forms.py
cab/components/: components.py  snippet_list.html
cab/migrations/: 0001_initial.py  0002_migrate_ratings.py  0002_versions_to_char.py  0003_auto_20200803_1425.py  0003_remove_ratings_model.py  0004_add_version_field.py  0004_auto_20210310_0902.py  0005_alter_snippet_tags.py  0005_populate_version.py  0005_snippet_image.py  0006_add_flag.py  (+2 more)
comments_spamfighter/: admin.py  models.py  moderation.py
deploy/: root_urls.py  schema.xml  settings.py
djangosnippets/: adapters.py  feeds.py  schema.xml  storage.py  storages.py  urls.py  views.py  wsgi.py
fixtures/: cab.json  languages.json  snippets.json
ratings/: converters.py  models.py  urls.py  utils.py  views.py
requirements/: base.txt  development.txt  production.txt  vendor.txt
templatetags/: popular.py  snippets.py
tests/: settings.py  tests.py  urls.py
views/: bookmarks.py  popular.py  snippets.py
(+251 files in other folders)
